[gd_scene load_steps=2 format=3 uid="uid://build_menu"]

[ext_resource type="Script" path="res://scripts/ui/build_menu.gd" id="1_menu"]

[node name="BuildMenu" type="PanelContainer"]
visible = false
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -420.0
offset_top = -500.0
grow_horizontal = 0
grow_vertical = 0
script = ExtResource("1_menu")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2
theme_override_constants/separation = 8

[node name="Header" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="Title" type="Label" parent="VBoxContainer/Header"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 24
text = "Budowanie"

[node name="CategoryTabs" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 4

[node name="ScrollContainer" type="ScrollContainer" parent="VBoxContainer"]
custom_minimum_size = Vector2(400, 200)
layout_mode = 2
size_flags_vertical = 3
horizontal_scroll_mode = 0

[node name="BuildingsGrid" type="GridContainer" parent="VBoxContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/h_separation = 8
theme_override_constants/v_separation = 8
columns = 2

[node name="InfoPanel" type="PanelContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/InfoPanel"]
layout_mode = 2
theme_override_constants/separation = 4

[node name="NameLabel" type="Label" parent="VBoxContainer/InfoPanel/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "Cela pojedyncza"

[node name="CostLabel" type="Label" parent="VBoxContainer/InfoPanel/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 16
text = "Koszt: $1500"

[node name="SizeLabel" type="Label" parent="VBoxContainer/InfoPanel/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 16
text = "Rozmiar: 3x3"

[node name="DescLabel" type="Label" parent="VBoxContainer/InfoPanel/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 14
text = "Podstawowa cela dla jednego więźnia."
autowrap_mode = 2

[node name="ButtonsContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 8
alignment = 2

[node name="PlaceButton" type="Button" parent="VBoxContainer/ButtonsContainer"]
custom_minimum_size = Vector2(120, 48)
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "Umieść"

[node name="CloseButton" type="Button" parent="VBoxContainer/ButtonsContainer"]
custom_minimum_size = Vector2(100, 48)
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "Zamknij"
